# FructoseScript

./: .gitignore  Cargo.toml  README.md  cspell.json  deno.json  lefthook.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsdown.config.ts
crates/fructose_script/: Cargo.toml
crates/fructose_script_compiler/: Cargo.toml
crates/fructose_script_compiler/src/: lib.rs  scope.rs  transpile.rs
crates/fructose_script_ls/: Cargo.toml
crates/fructose_script_parser/: Cargo.toml
crates/fructose_script_parser/src/: ast.rs  grammar.lalrpop  lib.rs  visit.rs
src/: mod.ts
src/ts-plugin/: index.ts  language-plugin.ts  utils.ts
