[package]
name = "fructose_script_compiler"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
fructose_script_parser = { version = "0.0.1", path = "../fructose_script_parser" }
oxc = { version = "0.53.0", features = ["codegen"] }
